kubernetes/villas/backend-go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: backend-go
    app.kubernetes.io/part-of: villas-web
  name: backend-go
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: backend-go
      app.kubernetes.io/part-of: villas-web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backend-go
        app.kubernetes.io/part-of: villas-web
    spec:
      nodeSelector:
        kubernetes.io/hostname: kubernetes-worker-7
      imagePullSecrets:
      - name: stvogel-rwth-pull-secret
      containers:
      - name: backend-go
        image: registry.git.rwth-aachen.de/acs/public/villas/web-backend-go:f4cb42b7
        command: [ "villasweb-backend" ]
        livenessProbe:
          httpGet:
            path: /healthz
            port: 4000
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
        - name: http
          containerPort: 4000
