kubernetes/villas/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: broker
    app.kubernetes.io/part-of: villas-controller
  name: broker
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: broker
      app.kubernetes.io/part-of: villas-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/component: broker
        app.kubernetes.io/part-of: villas-controller
    spec:
      containers:
      - image: registry.git.rwth-aachen.de/acs/public/villas/demo/broker:demo-v0.1
        name: broker
        ports:
        - name: web-admin
          containerPort: 15672
        - name: amqp
          containerPort: 5672
        - name: mqtt
          containerPort: 1883
