kubernetes/villas/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: database
  name: database
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: database
  template:
    metadata:
      labels:
        app.kubernetes.io/component: database
    spec:
      containers:
      - image: mongo:3.4.23
        name: database
        volumeMounts:
        - mountPath: /data/db
          name: database
        ports:
        - containerPort: 27017
          name: mongodb
      volumes:
      - name: database
        persistentVolumeClaim:
          claimName: database
