kubernetes/villas/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: villas-web
  name: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/part-of: villas-web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: villas-web
    spec:
      containers:
      - image: registry.git.rwth-aachen.de/acs/public/villas/web:demo-v0.1
        name: frontend
        ports:
        - name: http
          containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 3
