kubernetes/villas/frontend-new-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: frontend-new
    app.kubernetes.io/part-of: villas-web
  name: frontend-new
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend-new
      app.kubernetes.io/part-of: villas-web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend-new
        app.kubernetes.io/part-of: villas-web
    spec:
      containers:
      - image: registry.git.rwth-aachen.de/acs/public/villas/web:ae53a167
        name: frontend-new
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
