kubernetes/villas/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: mongo-express
    app.kubernetes.io/part-of: villas-web
  name: mongo-express
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: mongo-express
      app.kubernetes.io/part-of: villas-web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: mongo-express
        app.kubernetes.io/part-of: villas-web
    spec:
      containers:
      - image: mongo-express:0.49.0
        name: mongo-express
        ports:
        - containerPort: 8081
          name: http
