kubernetes/villas/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: node
  name: node
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: node
  template:
    metadata:
      labels:
        app.kubernetes.io/component: node
    spec:
      containers:
      - args:
        - node
        - /etc/villas/node/demo.conf
        image: registry.git.rwth-aachen.de/acs/public/villas/node:demo-v0.3
        name: node
        ports:
        - containerPort: 80
        - containerPort: 12000
          protocol: UDP
        - containerPort: 12001
          protocol: UDP
        - containerPort: 12002
          protocol: UDP
        - containerPort: 12003
          protocol: UDP
        - containerPort: 12004
          protocol: UDP
        - containerPort: 12005
          protocol: UDP
        - containerPort: 12006
          protocol: UDP
        - containerPort: 12007
          protocol: UDP
        - containerPort: 12008
          protocol: UDP
        - containerPort: 12009
          protocol: UDP
        - containerPort: 12010
          protocol: UDP
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /etc/villas/node/
          name: config
        - mountPath: /data
          name: data
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: config
        configMap:
          name: node-config
      - name: data
        persistentVolumeClaim:
          claimName: node-data
