kubernetes/villas/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: villas-web
  name: backend
spec:
  ports:
  - name: http
    port: 4000
    targetPort: 4000
  selector:
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: villas-web
