kubernetes/villas/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app.kubernetes.io/component: database
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app.kubernetes.io/component: database
