kubernetes/villas/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: villas-web
  name: frontend
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: villas-web
