kubernetes/villas/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: mongo-express
    app.kubernetes.io/part-of: villas-web
  name: mongo-express
spec:
  ports:
  - name: http
    port: 8081
    targetPort: http
  selector:
    app.kubernetes.io/component: mongo-express
    app.kubernetes.io/part-of: villas-web
