kubernetes/villas/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: node
  name: node
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: sim-data-12000
    port: 12000
    protocol: UDP
    targetPort: 12000
  - name: sim-data-12001
    port: 12001
    protocol: UDP
    targetPort: 12001
  - name: sim-data-12002
    port: 12002
    protocol: UDP
    targetPort: 12002
  - name: sim-data-12003
    port: 12003
    protocol: UDP
    targetPort: 12003
  - name: sim-data-12004
    port: 12004
    protocol: UDP
    targetPort: 12004
  - name: sim-data-12005
    port: 12005
    protocol: UDP
    targetPort: 12005
  - name: sim-data-12006
    port: 12006
    protocol: UDP
    targetPort: 12006
  - name: sim-data-12007
    port: 12007
    protocol: UDP
    targetPort: 12007
  - name: sim-data-12008
    port: 12008
    protocol: UDP
    targetPort: 12008
  - name: sim-data-12009
    port: 12009
    protocol: UDP
    targetPort: 12009
  - name: sim-data-12010
    port: 12010
    protocol: UDP
    targetPort: 12010
  selector:
    app.kubernetes.io/component: node
