kubernetes/villas/relay-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: relay
    app.kubernetes.io/part-of: villas-node
  name: relay
spec:
  ports:
  - name: http
    port: 8088
    targetPort: 8088
  selector:
    app.kubernetes.io/component: relay
    app.kubernetes.io/part-of: villas-node
